--- a/w05-task.html
+++ b/w05-task.html
@@ -21,7 +21,7 @@
       <li><a href="w03-task.html">W3 Task</a></li>
       <li><a href="w04-task.html">W4 Task</a></li>
       <li><a href="w05-task.html" class="active">W5 Task</a></li>
-      <li><a href="project.html">Project</a></li>
+      <li><a href="project/project.html">Project</a></li>
     </ul>
   </nav>
   <main id="gridly">
@@ -49,6 +49,7 @@
     document.getElementById("year").innerHTML = new Date().getFullYear();
   </script>
   <script src="scripts/w05-task.js"></script>
+  
 </body>
 
 </html>
